[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
exclude = '''
(
  .*forward.*
  | .*node_modules.*
  | .*\.eggs.*
  | .*build/.*
  | ^/dist.*
  | .*_pb2\.py
  | .*_pb2_grpc\.py
  | .*gscoordinator/flex/models/*
  | .*gscoordinator/flex/controllers/*
  | .*gscoordinator/flex/.*\.py
)
'''
