[build-system]
requires = ["setuptools", "setuptools_scm>=5.0.0,<8", "wheel", "grpcio>=1.49", "grpcio-tools>=1.49", "mypy-protobuf", "numpy"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
exclude = '''
(
  .*forward.*
  | .*node_modules.*
  | .*\.eggs.*
  | .*build/.*
  | ^/dist.*
  | .*_pb2\.py
  | .*_pb2_grpc\.py
)
'''

