[metadata]
version = file: graphscope/VERSION

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = docs/_build
all_files  = 1

[upload_docs]
upload-dir = docs/_build/html

[isort]
ensure_newline_before_comments = True
line_length = 88
force_single_line = True
skip = build/,dist/,jupyter/graphscope/node_modules/,graphscope/learning/examples/,graphscope/learning/graphlearn/
skip_glob = *_pb2.py,*_pb2_grpc.py

[flake8]
max-line-length = 127
max-complexity = 18
# for flake8-quotes
inline-quotes = double
# for flake8-comprehensions
extend-ignore = E203,F401,F401,F403,C4,I250
extend-exclude =
    *_pb2.py
    *_pb2_grpc.py
    __init__.py
    build/
    dist/
    graphscope/tests/**
    graphscope/analytical/udf/compile.py
    graphscope/nx/tests/**
    graphscope/nx/algorithms/tests/**
    graphscope/nx/generators/tests/**
    graphscope/nx/readwrite/tests/**
    graphscope/proto/**
    graphscope/learning/examples/**
    graphscope/learning/graphlearn/**
    jupyter/graphscope/node_modules/.*
per-file-ignores =
    graphscope/nx/classes/function.py:F405
    graphscope/nx/algorithms/builtin.py:W605

[pylint]
max-line-length = 88
