[workspace]

members = [
    "runtime",
    "store",
    "server",
    "Pegasus",
    "ffi",
    "gaia_runtime"
]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units=1
# Don't change to "abort", since runtime rely on this to catch unexpected errors in worker threads.
panic = "unwind"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units=1
# Don't change to "abort", since runtime rely on this to catch unexpected errors in worker threads.
panic = "unwind"
